r300: hundreds of tests fail since "clear color buffers using color from a constant buffer"
773a23eb broke r300 quite hard. There are hundreds of failing dEQPs and piglits with RV530, just few random examples:
dEQP-GLES2.functional.shaders.swizzles.vector_swizzles.mediump_bvec4_zzwz_vertex,Fail
dEQP-GLES2.functional.texture.filtering.2d.linear_linear_clamp_etc1,Fail
dEQP-GLES2.functional.texture.filtering.2d.nearest_nearest_repeat_rgba8888_pot,Fail
dEQP-GLES2.functional.texture.filtering.cube.linear_linear_clamp_etc1,FaildEQP-GLES2.functional.shaders.conversions.vector_combine.vec3_float_to_bvec4_vertex,Fail
dEQP-GLES2.functional.shaders.conversions.vector_to_scalar.bvec2_to_bool_fragment,Fail
And also some tests that finished instantly before now take ages: dEQP-GLES2.functional.texture.filtering.cube.linear_mipmap_linear_linear_mirror_rgba8888
and similar took less than one second before and now run for 1 minute.
commit 773a23eb6daa470766a537ea34891237b790c2e6
Author: Indrajit Kumar Das <indrajit-kumar.das@amd.com>
Date: Fri May 13 17:02:14 2022 +0530
gallium/u_blitter: clear color buffers using color from a constant buffer
Reviewed-by: Marek Olšák <marek.olsak@amd.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/15318>
src/gallium/auxiliary/util/u_blitter.c | 44 +++++++++++++--------------
src/gallium/auxiliary/util/u_simple_shaders.c | 25 +++++++++++++++
src/gallium/auxiliary/util/u_simple_shaders.h | 3 ++
3 files changed, 50 insertions(+), 22 deletions(-)